# codex-continuity-os

./: .gitignore  CHANGELOG.md  CONTINUITY.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PROJECT_SPEC.md  README.md  SECURITY.md
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml
docs/: ARCHITECTURE.md  CODEX_CONTINUITY_OS_MVP.md  FINAL_LAUNCH_COMPANION.md  IMPLEMENTATION_JOURNAL.md  LAUNCH_READINESS.md  LIVE_DEMO_VISUAL.html  PRD.md  PROJECT_WALKTHROUGH.md  QUICKSTART.md  REPO_SECURITY.md  TASK_TRACKER.md  USER_FLOWS.md
scripts/: install-windows.ps1  live-demo.ps1  package-release.ps1
src/: main.rs  model.rs  scanner.rs  tui.rs
