[package]
name = "codex-continuity-os"
version = "0.1.2"
edition = "2024"

[[bin]]
name = "ccx"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.38", features = ["derive"] }
crossterm = "0.29.0"
ratatui = { version = "0.30.0", default-features = false, features = ["crossterm"] }
walkdir = "2.5.0"
